# contest

./: .gitignore  .gitmodules  CMakeLists.txt  Findtiny-tdd.cmake  README.md  cmake_install.cmake  install_manifest.txt  tiny-tddConfig.cmake
contest/: CMakeLists.txt  ide_printer.h  main.cpp
example/: CMakeLists.txt
example/cmake/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake  example.cpp  unittest.cpp
example/qmake/: example_qmake.pro  unittest.cpp
include/: ide_printer.h
src/: .gitignore  main.cpp
